# bevy_blob_loader

./: Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: ci.yml
bevy_blob_loader/: Cargo.toml
bevy_blob_loader/src/: lib.rs  path.rs  source.rs
example/: Cargo.toml  blob.js  index.html  style.css
example/src/: lib.rs
examples/: load_blob.js  load_blob.rs
src/: lib.rs  path.rs  source.rs
