[package]
name = "bevy_blob_loader"
description = "Bevy plugin for loading assets from JavaScript blob URLs."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[workspace]
resolver = "2"
members = ["example"]

[workspace.package]
version = "0.2.0"
edition = "2024"
repository = "https://github.com/kayhhh/bevy_blob_loader"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.22.1"
bevy = "0.17.2"
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["Request", "Window", "Response"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
