[package]
name = "bevy_blob_loader"
description = "Bevy plugin for loading assets from JavaScript blob URLs."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[workspace]
resolver = "2"
members = ["example"]

[workspace.package]
version = "0.2.2"
edition = "2024"
repository = "https://github.com/kayhhh/bevy_blob_loader"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
js-sys = "0.3.80"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.53"

[dependencies]
base64 = "0.22.1"
bevy = "0.17.2"
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { version = "0.3.80", features = ["Request", "Window", "Response"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
