[package]
name = "bevy_blob_loader"
description = "Bevy plugin for loading assets from JavaScript blob URLs."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.21.5"
bevy = "0.12.1"
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = ["Request", "Window", "Response"] }
