[package]
name = "example"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.17.1"
bevy_blob_loader = { path = ".." }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
