[package]
name = "example"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.17.2"
bevy_blob_loader = { path = ".." }
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
