[package]
name = "example"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.17.2"
bevy_blob_loader.path = ".."
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
